...
    // sleep the thread for 1 second to allow the data to be fetched
  }
  // travelContainers.getTravels()
  val travelList = listTravelViewModel.travels.collectAsState().value

  Scaffold(
      modifier = Modifier.testTag("TravelListScreen"),
      floatingActionButton = {
        FloatingActionButton(
            onClick = { navigationActions.navigateTo(Screen.ADD_TRAVEL) },
            modifier = Modifier.testTag("createTravelFab")) {
              Icon(imageVector = Icons.Default.Add, contentDescription = "Add")
            }
      },
      content = { pd ->
        Column {
          // Add the map to display the travels
...
                      navigationActions.navigateTo(Screen.TRAVEL_ACTIVITIES)
                    }
                  }
                }
          } else {
            Text(
                modifier = Modifier.padding(pd).testTag("emptyTravelPrompt"),
                text = "You have no travels yet.")
          }
        }
      })
}

/**
...
